Import of PWBENNETT/Net-IPAddress-Util-0.02 from CPAN.
gitpan-cpan-distribution: Net-IPAddress-Util
gitpan-cpan-version:      0.02
gitpan-cpan-path:         PWBENNETT/Net-IPAddress-Util-0.02.tar.gz
gitpan-cpan-author:       PWBENNETT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
-Revision history for IPAddress-Simple
+Revision history for Net-IPAddress-Util
 
-0.01    Date/time
+0.02    2010-03-21
+        Fixed bugs in ip2num() and num2ip(). Fixed distro name in Changes file.
+
+0.01    2010-03-21
         First version, released on an unsuspecting world.
 
