Import of PWBENNETT/Net-IPAddress-Util-0.03 from CPAN.
gitpan-cpan-distribution: Net-IPAddress-Util
gitpan-cpan-version:      0.03
gitpan-cpan-path:         PWBENNETT/Net-IPAddress-Util-0.03.tar.gz
gitpan-cpan-author:       PWBENNETT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Net-IPAddress-Util
 
+0.03    2010-03-21
+        Added tests for compatibility API.
+
 0.02    2010-03-21
         Fixed bugs in ip2num() and num2ip(). Fixed distro name in Changes file.
 
