--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Net-IPAddress-Util
 
+0.06    2010-03-22
+        Add $PROMOTE_N32 and ->as_n32().
+        Hopefully fix a weird bug on *BSD systems.
+        Now at 76.2% coverage.
+
 0.05    2010-03-22
         Make compatability API test better at surviving lack of Net::IPAddress
 
