--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Net-IPAddress-Util
 
+0.07    2010-03-25
+        Add more purely-diagnostic tests.
+        Hopefully fix weird $PROMOTE_N32 and ->as_n32() bug on Windows and BSD.
+
 0.06    2010-03-22
         Add $PROMOTE_N32 and ->as_n32().
         Hopefully fix a weird bug on *BSD systems.
