--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Net-IPAddress-Util
 
+0.08    2010-03-25
+        Add hopefully more-useful output to the diagnostic tests
+
 0.07    2010-03-25
         Add more purely-diagnostic tests.
         Hopefully fix weird $PROMOTE_N32 and ->as_n32() bug on Windows and BSD.
