Import of PWBENNETT/Net-IPAddress-Util-0.10 from CPAN.
gitpan-cpan-distribution: Net-IPAddress-Util
gitpan-cpan-version:      0.10
gitpan-cpan-path:         PWBENNETT/Net-IPAddress-Util-0.10.tar.gz
gitpan-cpan-author:       PWBENNETT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Net-IPAddress-Util
 
+0.10    2010-04-28
+        Fewer internal dependencies means fewer chances to use the wrong lib.
+
 0.09    2010-03-27
         Try to be even more bullet-proof wrt the N32 bugs.
 
