Import of PWBENNETT/Net-IPAddress-Util-0.12 from CPAN.
gitpan-cpan-distribution: Net-IPAddress-Util
gitpan-cpan-version:      0.12
gitpan-cpan-path:         PWBENNETT/Net-IPAddress-Util-0.12.tar.gz
gitpan-cpan-author:       PWBENNETT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Net-IPAddress-Util
 
+0.12    2011-03-26
+        Fix completely idiotic thinko in handling backend specification.
+
+0.11    2011-03-26
+        Try to solve weird issue with certain binary versions of GMP and Pari.
+
 0.10    2010-04-28
         Fewer internal dependencies means fewer chances to use the wrong lib.
 
