Import of PWBENNETT/Net-IPAddress-Util-1.000 from CPAN.
gitpan-cpan-distribution: Net-IPAddress-Util
gitpan-cpan-version:      1.000
gitpan-cpan-path:         PWBENNETT/Net-IPAddress-Util-1.000.tar.gz
gitpan-cpan-author:       PWBENNETT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Net-IPAddress-Util
 
+1.000   2012-05-24
+        Move from ISA BigInt to HASA BigInt to try to solve the GMP / Pari
+        stuff once and for all.
+
 0.12    2011-03-26
         Fix completely idiotic thinko in handling backend specification.
 
