--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Net-IPAddress-Util
 
+2.000   2013-10-23
+        Experimental release. Functionally pretty sound. Relies on mop and
+        no longer relies on anything from bignum (goodbye GMP / Pari bugs)
+
 1.002   2012-06-09
         Make it explicit that 5.010 is required. Start trying to make the
         time trials smarter.
