--- a/Changes
+++ b/Changes
@@ -1,21 +1,7 @@
 Revision history for Net-IPAddress-Util
 
-2.004   2013-10-30
-        Fix more stupid remnants of "needing" 5.018
-
-2.003   2013-10-30
-        Fix stupid remnants of "needing" 5.018
-
-2.002   2013-10-29
-        Experimental release. Another quick hack to the Makefile.PL for weirdos
-        who don't have Time::HiRes for some reason
-
-2.001   2013-10-29
-        Experimental release. Quick hack to make it work
-
-2.000   2013-10-23
-        Experimental release. Functionally pretty sound. Relies on mop and
-        no longer relies on anything from bignum (goodbye GMP / Pari bugs)
+1.500   2013-10-31
+        Attempt to backport the 2.x speedups and fixes into a non-mop env.
 
 1.002   2012-06-09
         Make it explicit that 5.010 is required. Start trying to make the
