Import of PWBENNETT/Net-IPAddress-Util-3.000 from CPAN.
gitpan-cpan-distribution: Net-IPAddress-Util
gitpan-cpan-version:      3.000
gitpan-cpan-path:         PWBENNETT/Net-IPAddress-Util-3.000.tar.gz
gitpan-cpan-author:       PWBENNETT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Net-IPAddress-Util
 
+3.000   2013-11-01
+        Back to proper CPAN-friendly version numbers
+
 1.500   2013-10-31
         Attempt to backport the 2.x speedups and fixes into a non-mop env.
 
