--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Net-IPAddress-Util
 
-3.015   2014-09-27
+3.016   2014-09-29
+        Code cleaning
+
+3.015   2014-09-29
         Was not accepting integers bigger than 32 bits, regardless of $PROMOTE_N32 setting
 
 3.014   2014-09-27
