Import of PWBENNETT/Net-IPAddress-Util-3.017 from CPAN.
gitpan-cpan-distribution: Net-IPAddress-Util
gitpan-cpan-version:      3.017
gitpan-cpan-path:         PWBENNETT/Net-IPAddress-Util-3.017.tar.gz
gitpan-cpan-author:       PWBENNETT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Net-IPAddress-Util
 
+3.017   2014-09-29
+        Code beautifying for Kwalitee purposes
+
 3.016   2014-09-29
         Code cleaning
 
